@@ -23,3 +23,4 @@ sqlParser.h
 queryParser.c
 queryLexer.c
 ylwrap
+sfcbd.sup
