@@ -30,7 +30,6 @@
 #include "utilft.h"
 #include "msgqueue.h"
 #include "constClass.h"
-#include "qualifier.h"
 #include "cimXmlParser.h"
 #include "support.h"
 #include "native.h"
@@ -39,6 +38,9 @@
 #include "selectexp.h"
 #include "config.h"
 
+#ifdef HAVE_QUALREP
+#include "qualifier.h"
+#endif
 
 #ifdef HAVE_INDICATIONS
 #define SFCB_INCL_INDICATION_SUPPORT 1
@@ -955,12 +957,14 @@ static BinResponseHdr *intInvokeProvider(BinRequestContext * ctx,ComSockets sock
          ((BinRequestHdr *) buf)->object[i].data = (void *) l;
          l += ol;
          break;
+#ifdef HAVE_QUALREP
       case MSG_SEG_QUALIFIER:
          getSerializedQualifier((CMPIQualifierDecl *) hdr->object[i].data,
                                  buf + l);
          ((BinRequestHdr *) buf)->object[i].data = (void *) l;
          l += ol;
-         break;         
+         break;
+#endif
       default:
          mlogf(M_ERROR,M_SHOW,"--- bad intInvokeProvider request %d-%d\n", i,hdr->object[i].type);
          abort();
