@@ -4,6 +4,7 @@ Changes in 1.2.0
 New features:
 - 1296278 Added slp support, integrated slp stuff into build system
 - 1566963 Added qualifier support
+- 1569239 Qualifier support configurable
 - moved some util functions to sfcUtil, build as shared library
 
 Bugs fixed:
